Fixed MoveInWhenVisibleSkills issue where the elements were not aligning

--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -14,7 +14,7 @@
     align-items: center;
     position: relative;
     overflow: scroll;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 .about {
@@ -38,12 +38,17 @@
 
 .bio {
     margin-top: 70px;
+    margin-left: 50px;
     width: 47%;
     padding: 0 20px;
     font-family: 'Urbanist';
     font-size: 27pt;
     text-align: justify;
-    border: 1px solid black;
+}
+
+.bio-color {
+    color: #00b5c2;
+    font-weight: bold;
 }
 
 .skills {
@@ -54,18 +59,18 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     justify-items: center;
-    text-align: justify;
-    border: 1px solid black;
+    align-items: center;
+    /* border: 1px solid black; */
 }
 
 .skill {
     font-size: 30pt;
     font-family: 'Urbanist';
+    width: 350px;
     display: flex;
     align-items: center;
     gap: 10px;
-    gap: 10px;
-    width: 50%;
+    /* border: 1px solid black; */
 }
 
 .skill p {
